Maquetación vista cambio de contraseña

--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -182,7 +182,7 @@
                             android:textColor="@color/white"
                             android:text="@string/password_profile"
                             android:textSize="18sp"/>
-                        <EditText
+                        <TextView
                             android:id="@+id/edit_profile_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -426,16 +426,16 @@
                             android:layout_marginLeft="4dp"
                             android:src="@drawable/icon_location_green"
                             android:padding="8dp"/>
-                        <TextView
-                            android:id="@+id/city_field_profile"
+                        <com.example.tinder_roush.Utils.SpinnerCustom
+                            android:id="@+id/spinner_city_edit"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:text="@string/match_city"
-                            android:textColor="@color/green1"
-                            android:textStyle="bold"
-                            android:background="@android:color/transparent"
-                            android:textSize="14sp" />
+                            android:layout_height="match_parent"
+                            android:paddingLeft="8dp"
+                            android:layout_gravity="top"
+                            app:textColor="@color/green2"
+                            android:paddingHorizontal="8dp"
+                            app:highlightColor="@color/green2"
+                            android:background="@android:color/transparent"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -462,6 +462,7 @@
                         android:orientation="vertical">
 
                         <SeekBar
+                            android:id="@+id/distance_range_edit"
                             android:layout_width="match_parent"
                             android:layout_height="20dp"
                             android:layout_marginTop="10dp"
@@ -475,13 +476,17 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="110dp"
                                 android:text="0km"/>
+                            <TextView
+                                android:id="@+id/max_range_edit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="110dp"/>
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="110dp"
-                                android:text="40km"/>
+                                android:text="50km"/>
                         </LinearLayout>
 
                     </LinearLayout>
@@ -510,11 +515,13 @@
                         android:layout_marginBottom="20dp"
                         android:orientation="vertical">
 
-                        <SeekBar
+                        <com.google.android.material.slider.RangeSlider
+                            android:id="@+id/age_range_edit"
                             android:layout_width="match_parent"
-                            android:layout_height="20dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_gravity="center"/>
+                            android:layout_height="wrap_content"
+                            android:valueFrom="18.0"
+                            android:valueTo="60.0"
+                            android:theme="@style/MyMaterialTheme"/>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -524,12 +531,27 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="110dp"
+                                android:layout_marginRight="85dp"
                                 android:text="18 años"/>
+                            <TextView
+                                android:id="@+id/min_age_edit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="20dp" />
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="110dp"
+                                android:text="a"/>
+                            <TextView
+                                android:id="@+id/max_age_edit"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="85dp"
                                 android:text="60 años"/>
                         </LinearLayout>
 
@@ -597,7 +619,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="10dp"
                         android:layout_gravity="center"
-                        android:text="@string/with_children"
+                        android:text="@string/with_pets"
                         android:textColor="@color/black"
                         android:textStyle="bold"
                         android:textSize="20sp"/>
