--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -520,35 +520,56 @@
                             android:theme="@style/MyMaterialTheme"/>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center">
+                            android:orientation="horizontal"
 
-                            <TextView
-                                android:layout_width="wrap_content"
+                            >
+                            <LinearLayout
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="85dp"
-                                android:text="18 años"/>
-                            <TextView
-                                android:id="@+id/min_age_profile"
-                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="left">
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+
+                                    android:text="18 años"/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="20dp" />
-                            <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center">
+                                <TextView
+                                    android:id="@+id/min_age_profile"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginRight="5dp" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="a"/>
+                                <TextView
+                                    android:id="@+id/max_age_profile"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="5dp"
+                                    />
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="a"/>
-                            <TextView
-                                android:id="@+id/max_age_profile"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="20dp"
-                                />
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="85dp"
-                                android:text="60 años"/>
+                                android:layout_weight="1"
+                                android:gravity="end">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="60 años"/>
+                            </LinearLayout>
+
+
+
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
