--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -79,16 +79,10 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_likes_given"
+        android:id="@+id/recycler_likes_received"
+        android:layout_marginHorizontal="20dp"
         android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/recycler_likes_received"-->
-<!--        android:padding="15dp"-->
-<!--        android:layout_marginTop="-225dp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"/>-->
 
 </LinearLayout>
