--- a/app/src/main/res/layout/item_like_list.xml
+++ b/app/src/main/res/layout/item_like_list.xml
@@ -1,38 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="center"
+        android:gravity="center|left"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/like_person_image"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@color/gray"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="30dp">
+
+            <ImageView
+                android:id="@+id/like_person_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/photo_main"
+                android:contentDescription="TODO" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/text1_like"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:layout_marginHorizontal="5dp"
-            android:textSize="20sp"
+            android:layout_marginHorizontal="6dp"
+            android:textSize="16sp"
+            android:textColor="@color/black"
             android:text="@string/your_given_likes"/>
 
         <TextView
             android:id="@+id/text2_like"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:textSize="20sp"
-            android:text="@string/your_given_likes"/>
+            android:textColor="@color/black"
+            android:layout_marginHorizontal="2dp"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
 
-
+        <TextView
+            android:id="@+id/text_hour_like"
+            android:layout_width="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_height="25dp"
+            android:textSize="15sp"
+            android:layout_gravity="center|right"
+            android:textColor="@color/gray"
+            android:text="10min"
+            />
     </LinearLayout>
-
 </LinearLayout>
