Integración likes dados

--- a/app/src/main/res/layout/item_like_list.xml
+++ b/app/src/main/res/layout/item_like_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,54 +9,56 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:layout_marginBottom="5dp"
+        android:padding="6dp"
+        android:layout_marginBottom="2dp"
         android:layout_gravity="center"
         android:gravity="center|left"
         android:orientation="horizontal">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            app:cardElevation="0dp"
-            app:cardCornerRadius="30dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="30dp">
 
-            <ImageView
-                android:id="@+id/like_person_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/photo_main"
-                android:contentDescription="TODO" />
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/like_person_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/photo_main"
+                    tools:ignore="ContentDescription" />
+            </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/text1_like"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_marginHorizontal="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:text="@string/your_given_likes"/>
+            <TextView
+                android:id="@+id/text1_like"
+                android:layout_width="140dp"
+                android:layout_height="25dp"
+                android:layout_marginHorizontal="6dp"
+                android:layout_gravity="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:text="@string/your_given_likes"/>
 
-        <TextView
-            android:id="@+id/text2_like"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:textColor="@color/black"
-            android:layout_marginHorizontal="2dp"
-            android:textStyle="bold"
-            android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/text2_like"
+                android:layout_width="100dp"
+                android:layout_height="25dp"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="2dp"
+                android:textStyle="bold"
+                android:textSize="15sp"/>
 
-        <TextView
-            android:id="@+id/text_hour_like"
-            android:layout_width="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="25dp"
-            android:textSize="15sp"
-            android:layout_gravity="center|right"
-            android:textColor="@color/gray"
-            android:text="10min"
-            />
+            <TextView
+                android:id="@+id/text_hour_like"
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                android:layout_marginHorizontal="5dp"
+                android:textSize="14sp"
+                android:layout_gravity="center|end"
+                android:textColor="@color/gray"
+                android:text="10min"
+                />
     </LinearLayout>
 </LinearLayout>
