--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -57,6 +57,7 @@
                         android:id="@+id/config_notifications"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
+                        android:layout_marginLeft="-50dp"
                         android:padding="10dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/setting"/>
@@ -77,7 +78,8 @@
                     android:id="@+id/profile_photo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/photo_main"/>
+                    android:background="@color/black"
+                    android:src="@drawable/icon_camera"/>
                 </androidx.cardview.widget.CardView>
 
                 <!--Info my profile-->
