--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -76,9 +76,16 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_likes_received"
+        android:id="@+id/recycler_likes_given"
         android:padding="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/recycler_likes_received"-->
+<!--        android:padding="15dp"-->
+<!--        android:layout_marginTop="-225dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
 
 </LinearLayout>
