--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -78,7 +78,8 @@
                     android:id="@+id/profile_photo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/black"
+                    android:scaleType="centerInside"
+                    android:background="@color/gray"
                     android:src="@drawable/icon_camera"/>
                 </androidx.cardview.widget.CardView>
 
@@ -522,9 +523,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-
-                            >
+                            android:orientation="horizontal">
                             <LinearLayout
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
