--- a/app/src/main/res/layout/item_like_received_list.xml
+++ b/app/src/main/res/layout/item_like_received_list.xml
@@ -2,34 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="6dp"
+        android:layout_marginBottom="2dp"
+        android:layout_gravity="center"
+        android:gravity="center|left"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/like_person_image"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@color/gray"/>
+        <androidx.cardview.widget.CardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="30dp">
+            <ImageView
+                android:id="@+id/person_image_like"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/photo_main"
+                />
+        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/text1_like_received"
+            android:id="@+id/person_give_me_like"
             android:layout_width="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:layout_height="25dp"
-            android:textSize="20sp"/>
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/text2_like_received"
-            android:layout_width="wrap_content"
+            android:layout_width="140dp"
             android:layout_height="25dp"
-            android:layout_marginHorizontal="5dp"
-            android:textSize="20sp"
+            android:textSize="15sp"
+            android:textColor="@color/black"
             android:text="@string/your_received_likes"/>
+
+        <TextView
+            android:id="@+id/time_received_like"
+            android:layout_width="50dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="10dp"
+            android:gravity="end"
+            android:textSize="14sp"
+            android:textColor="@color/gray"
+            android:text="10min"/>
 
     </LinearLayout>
 
