--- a/app/src/main/res/layout/item_like_received_list.xml
+++ b/app/src/main/res/layout/item_like_received_list.xml
@@ -11,7 +11,6 @@
         android:padding="6dp"
         android:layout_marginBottom="2dp"
         android:layout_gravity="center"
-        android:gravity="center|left"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -33,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_height="25dp"
+            android:layout_gravity="center"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="15sp"/>
@@ -42,6 +42,7 @@
             android:layout_width="140dp"
             android:layout_height="25dp"
             android:textSize="15sp"
+            android:layout_gravity="center"
             android:textColor="@color/black"
             android:text="@string/your_received_likes"/>
 
@@ -49,8 +50,7 @@
             android:id="@+id/time_received_like"
             android:layout_width="50dp"
             android:layout_height="25dp"
-            android:layout_marginRight="10dp"
-            android:gravity="end"
+            android:layout_gravity="center|end"
             android:textSize="14sp"
             android:textColor="@color/gray"
             android:text="10min"/>
