--- a/app/src/main/res/drawable/gradient_black.xml
+++ b/app/src/main/res/drawable/gradient_black.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@android:color/transparent"
-        android:endColor="#88000000"
+        android:startColor="#19191919"
+        android:endColor="@color/black"
         android:angle="270"
         />
 
