--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,9 +49,9 @@
                         android:layout_weight="10"
                         android:layout_gravity="center"
                         android:fontFamily="@font/montserrat_bold"
+                        android:textSize="24sp"
                         android:gravity="center"
                         android:text="@string/title_profile"
-                        android:textSize="24sp"
                         android:textStyle="bold"
                         android:textColor="@color/white"/>
 
@@ -104,7 +104,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/montserrat_bold"
-                            android:layout_marginRight="5dp"
+                            android:layout_marginEnd="5dp"
                             android:text=""
                             android:textSize="22sp"
                             android:textColor="@color/white"
