--- a/app/src/main/res/layout/bottom_dialog_filter.xml
+++ b/app/src/main/res/layout/bottom_dialog_filter.xml
@@ -69,12 +69,25 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginBottom="10dp"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="left"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:layout_gravity="center"
+            android:text="@string/want_to_see"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:layout_gravity="start"
+            android:fontFamily="@font/montserrat_bold"
             android:text="@string/gender_preference_filter"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -91,37 +104,41 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
+                android:fontFamily="@font/monserrat_medium"
                 android:background="@drawable/border_left_green"
                 android:text="@string/men"
                 android:textColor="@color/white"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
 
             <Button
                 android:id="@+id/filter_woman_home"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
+                android:fontFamily="@font/monserrat_medium"
                 android:background="@drawable/border_gray_transparent"
                 android:text="@string/women"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
 
             <Button
                 android:id="@+id/filter_both_home"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
+                android:fontFamily="@font/monserrat_medium"
                 android:background="@drawable/border_gray_transparent"
                 android:text="@string/both"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
 
             <Button
                 android:id="@+id/filter_other_home"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false"
+                android:fontFamily="@font/monserrat_medium"
                 android:background="@drawable/border_rigth_white"
                 android:text="@string/other"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -136,7 +153,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
+            android:fontFamily="@font/montserrat_bold"
             android:text="@string/search_location"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -146,16 +164,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="15dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="38dp"
+            android:layout_marginLeft="38dp"
             android:background="@drawable/border_green_soft_transparent_round">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_gravity="center"
                 android:src="@drawable/icon_location_green"
                 android:padding="8dp"/>
             <com.example.tinder_roush.Utils.SpinnerCustom
@@ -163,7 +181,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="8dp"
-                android:layout_gravity="top"
+                android:gravity="center"
                 app:textColor="@color/green2"
                 android:paddingHorizontal="8dp"
                 app:highlightColor="@color/green2"
@@ -186,8 +204,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
             android:textSize="18sp"
+            android:fontFamily="@font/montserrat_bold"
             android:text="@string/distance_filter"
             android:textColor="@color/black"
             android:textStyle="bold"/>
@@ -242,7 +261,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
+            android:fontFamily="@font/montserrat_bold"
             android:text="@string/max_age"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -316,6 +336,7 @@
                 android:padding="5dp"
                 android:background="@drawable/border_green_round2"
                 android:text="@string/save_filters"
+                android:fontFamily="@font/montserrat_bold"
                 android:textSize="16sp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"/>
@@ -326,6 +347,7 @@
                 android:layout_height="50dp"
                 android:background="@drawable/border_green_transparent_round"
                 android:padding="5dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="@string/clear_filters"
                 android:textSize="16sp"
                 android:textAllCaps="false"
