--- a/app/src/main/res/layout/card_person.xml
+++ b/app/src/main/res/layout/card_person.xml
@@ -19,7 +19,7 @@
     <!--Person information-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:gravity="center|bottom"
         android:layout_gravity="bottom"
@@ -28,36 +28,37 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:gravity="center"
             android:layout_gravity="bottom"
             android:padding="16dp"
             android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/card_person_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text="alguien"
-            android:textSize="20sp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text=","
-            android:textSize="20sp"/>
-        <TextView
-            android:id="@+id/card_person_age"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text="26"
-            android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/card_person_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:fontFamily="@font/monserrat_medium"
+                android:textColor="@color/white"
+                android:text="alguien"
+                android:textSize="20sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:text=","
+                android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/card_person_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/monserrat_medium"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:text="26"
+                android:textSize="20sp"/>
     </LinearLayout>
 
         <TextView
@@ -65,6 +66,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="-30dp"
+            android:fontFamily="@font/monserrat_medium"
+            android:layout_marginBottom="25dp"
             android:textColor="@color/white"
             android:text="hace algo"
             android:textSize="18sp"/>
