--- a/app/src/main/res/layout/fragment_match_.xml
+++ b/app/src/main/res/layout/fragment_match_.xml
@@ -47,13 +47,15 @@
                   android:layout_height="wrap_content"
                   android:text="@string/match_header"
                   android:gravity="center"
+                  android:fontFamily="@font/montserrat_bold"
                   android:textColor="@color/green3"
-                  android:textSize="30sp"
+                  android:textSize="28sp"
                   android:layout_gravity="center"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/match_city"
+                  android:fontFamily="@font/monserrat_medium"
                   android:layout_marginTop="-8dp"
                   android:textColor="@color/black"
                   android:textSize="15sp"
@@ -92,22 +94,22 @@
                 android:layout_margin="30dp"
                 android:background="@drawable/border_white_transparent"/>
 
-            Buttons match/swipe
+<!--            Buttons match/swipe-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:orientation="horizontal"
-                   android:layout_marginTop="-200dp"
+                   android:layout_marginTop="-220dp"
+                   android:layout_marginHorizontal="30dp"
                    android:layout_gravity="center"
                    android:gravity="center">
 
                    <ImageButton
                        android:id="@+id/swipe_button"
-                       android:layout_width="120dp"
-                       android:layout_height="120dp"
-                       android:layout_marginTop="10dp"
-                       android:layout_marginRight="10dp"
+                       android:layout_width="130dp"
+                       android:layout_height="130dp"
+                       android:layout_marginStart="8dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/swipe_button"/>
 
@@ -115,15 +117,14 @@
                        android:id="@+id/like_button"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
-                       android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/like_button"/>
 
                    <ImageButton
                        android:id="@+id/match_button"
-                       android:layout_width="120dp"
-                       android:layout_height="120dp"
-                       android:layout_marginTop="10dp"
+                       android:layout_width="130dp"
+                       android:layout_height="130dp"
+                       android:layout_marginEnd="8dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/match_button"/>
 
