--- a/app/src/main/res/layout/fragment_match_.xml
+++ b/app/src/main/res/layout/fragment_match_.xml
@@ -7,10 +7,10 @@
     android:orientation="vertical"
     tools:context=".MatchSuccess.MatchSuccess">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scrollbars="none">-->
         <!--Linear Layout Principal-->
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,7 +90,7 @@
             <com.yuyakaido.android.cardstackview.CardStackView
                 android:id="@+id/card_stack_view"
                 android:layout_width="match_parent"
-                android:layout_height="600dp"
+                android:layout_height="match_parent"
                 android:layout_margin="30dp"
                 android:background="@drawable/border_white_transparent"/>
 
@@ -134,6 +134,6 @@
 
     </LinearLayout>
 
-    </ScrollView>
+<!--    </ScrollView>-->
 
 </LinearLayout>
