--- a/app/src/main/res/layout/item_like_list.xml
+++ b/app/src/main/res/layout/item_like_list.xml
@@ -12,7 +12,7 @@
         android:padding="6dp"
         android:layout_marginBottom="2dp"
         android:layout_gravity="center"
-        android:gravity="center|left"
+        android:gravity="center"
         android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
@@ -32,9 +32,9 @@
 
             <TextView
                 android:id="@+id/text1_like"
-                android:layout_width="140dp"
+                android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:layout_marginHorizontal="6dp"
+                android:layout_marginStart="6dp"
                 android:fontFamily="@font/monserrat_medium"
                 android:layout_gravity="center"
                 android:textSize="13sp"
@@ -45,10 +45,10 @@
                 android:id="@+id/text2_like"
                 android:layout_width="100dp"
                 android:layout_height="25dp"
+                android:layout_marginHorizontal="5dp"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:fontFamily="@font/monserrat_semibold"
-                android:layout_marginHorizontal="2dp"
                 android:textStyle="bold"
                 android:textSize="13sp"/>
 
@@ -56,12 +56,11 @@
                 android:id="@+id/text_hour_like"
                 android:layout_width="50dp"
                 android:layout_height="25dp"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginEnd="0dp"
                 android:fontFamily="@font/monserrat_medium"
                 android:textSize="12sp"
                 android:layout_gravity="center|end"
                 android:textColor="@color/gray"
-                android:text="10min"
-                />
+                android:text="10min" />
     </LinearLayout>
 </LinearLayout>
