--- a/app/src/main/res/layout/item_like_received_list.xml
+++ b/app/src/main/res/layout/item_like_received_list.xml
@@ -30,7 +30,7 @@
         <TextView
             android:id="@+id/person_give_me_like"
             android:layout_width="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginStart="6dp"
             android:layout_height="25dp"
             android:fontFamily="@font/monserrat_semibold"
             android:layout_gravity="center"
@@ -40,9 +40,11 @@
 
         <TextView
             android:id="@+id/text2_like_received"
-            android:layout_width="140dp"
+            android:layout_width="165dp"
             android:layout_height="25dp"
+            android:layout_weight="1"
             android:textSize="13sp"
+            android:layout_marginStart="8dp"
             android:layout_gravity="center"
             android:fontFamily="@font/monserrat_semibold"
             android:textColor="@color/black"
@@ -51,6 +53,7 @@
         <TextView
             android:id="@+id/time_received_like"
             android:layout_width="50dp"
+            android:layout_weight="0.5"
             android:layout_height="25dp"
             android:layout_gravity="center|end"
             android:fontFamily="@font/monserrat_medium"
