--- a/app/src/main/res/layout/fragment_match_.xml
+++ b/app/src/main/res/layout/fragment_match_.xml
@@ -52,6 +52,7 @@
                   android:textSize="28sp"
                   android:layout_gravity="center"/>
               <TextView
+                  android:id="@+id/city_matchs"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/match_city"
