--- a/app/src/main/res/layout/item_like_received_list.xml
+++ b/app/src/main/res/layout/item_like_received_list.xml
@@ -11,6 +11,7 @@
         android:padding="6dp"
         android:layout_marginBottom="2dp"
         android:layout_gravity="center"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
@@ -27,38 +28,56 @@
                 />
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/person_give_me_like"
-            android:layout_width="110dp"
-            android:layout_marginStart="6dp"
-            android:layout_height="25dp"
-            android:fontFamily="@font/monserrat_semibold"
-            android:layout_gravity="center"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="13sp"/>
 
-        <TextView
-            android:id="@+id/text2_like_received"
-            android:layout_width="120dp"
-            android:layout_height="25dp"
-            android:textSize="13sp"
-            android:layout_marginStart="8dp"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:layout_gravity="center"
-            android:fontFamily="@font/monserrat_semibold"
-            android:textColor="@color/black"
-            android:text="@string/your_received_likes"/>
+            android:layout_marginLeft="2dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/person_give_me_like"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_bold"
+                android:layout_gravity="center|start"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="13sp"/>
+
+            <TextView
+                android:id="@+id/text2_like_received"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:layout_marginStart="8dp"
+                android:layout_gravity="center|start"
+                android:fontFamily="@font/monserrat_semibold"
+                android:textColor="@color/black"
+                android:text="@string/your_received_likes"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/time_received_like"
-            android:layout_width="50dp"
-            android:layout_weight="0.5"
-            android:layout_height="25dp"
-            android:layout_gravity="center|end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center|end"
             android:fontFamily="@font/monserrat_medium"
             android:textSize="12sp"
             android:textColor="@color/gray"
             android:text="10min"/>
+        </LinearLayout>
 
     </LinearLayout>
 
