--- a/app/src/main/res/layout/bottom_dialog_filter.xml
+++ b/app/src/main/res/layout/bottom_dialog_filter.xml
@@ -157,6 +157,7 @@
             android:fontFamily="@font/montserrat_bold"
             android:text="@string/search_location"
             android:textSize="18sp"
+            android:layout_marginBottom="15dp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
 
@@ -165,8 +166,9 @@
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="80dp"
-            android:layout_marginRight="38dp"
-            android:layout_marginLeft="38dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:padding="2dp"
             android:background="@drawable/border_green_soft_transparent_round">
 
             <ImageView
@@ -183,7 +185,6 @@
                 android:paddingLeft="8dp"
                 android:gravity="center"
                 app:textColor="@color/green2"
-                android:paddingHorizontal="8dp"
                 app:highlightColor="@color/green2"
                 android:background="@android:color/transparent"/>
         </LinearLayout>
@@ -206,6 +207,7 @@
             android:layout_marginHorizontal="10dp"
             android:layout_gravity="start"
             android:textSize="18sp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="@font/montserrat_bold"
             android:text="@string/distance_filter"
             android:textColor="@color/black"
