--- a/app/src/main/res/layout/item_like_received_list.xml
+++ b/app/src/main/res/layout/item_like_received_list.xml
@@ -50,9 +50,10 @@
 
             <TextView
                 android:id="@+id/text2_like_received"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="25dp"
                 android:textSize="13sp"
+                android:gravity="center|start"
                 android:layout_marginStart="8dp"
                 android:layout_gravity="center|start"
                 android:fontFamily="@font/monserrat_semibold"
