--- a/app/src/main/res/layout/fragment_chats_detail.xml
+++ b/app/src/main/res/layout/fragment_chats_detail.xml
@@ -34,7 +34,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="-50dp"
+            android:layout_marginLeft="-40dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="30dp">
 
@@ -63,6 +63,7 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             app:cardCornerRadius="30dp"
+            android:layout_marginLeft="10dp"
             app:cardElevation="0dp">
 
             <ImageView
@@ -80,24 +81,24 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/text1_like"
+                android:id="@+id/name_person"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:layout_marginHorizontal="6dp"
                 android:fontFamily="@font/montserrat_bold"
-                android:text="@string/your_given_likes"
+                android:text="@string/name"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/text2_like"
-                android:layout_width="match_parent"
-                android:layout_height="15dp"
-                android:layout_marginHorizontal="2dp"
-                android:fontFamily="@font/monserrat_semibold"
-                android:textColor="@color/gray"
-                android:textSize="13sp"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:id="@+id/text2_like"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="15dp"-->
+<!--                android:layout_marginHorizontal="2dp"-->
+<!--                android:fontFamily="@font/monserrat_semibold"-->
+<!--                android:textColor="@color/gray"-->
+<!--                android:textSize="13sp"-->
+<!--                android:textStyle="bold" />-->
         </LinearLayout>
 
     </LinearLayout>
@@ -105,7 +106,9 @@
     <!--Chats-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+
         android:orientation="vertical">
 
         <!--Divider-->
@@ -120,9 +123,42 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_chats"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="35dp"/>
 
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="30dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        >
+        <EditText
+            android:id="@+id/message_chat"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_weight="6"
+            android:hint="@string/message_send"
+            android:paddingLeft="8dp"
+            android:textColor="@color/green4"
+            android:textColorHint="@color/gray1"
+            android:inputType="text"
+            android:background="@drawable/border_green_white_round"
+            android:textSize="14sp"/>
+        <Button
+            android:id="@+id/send_message"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/green4"
+            android:fontFamily="@font/montserrat_bold"
+            android:background="@drawable/border_green_white_round_send"
+            android:textSize="18sp"
+            android:layout_marginLeft="10dp"
+            android:textAllCaps="false"/>
     </LinearLayout>
 
 </LinearLayout>
