--- a/app/src/main/res/layout/item_chat_list.xml
+++ b/app/src/main/res/layout/item_chat_list.xml
@@ -81,7 +81,7 @@
                 android:gravity="end"
                 android:layout_marginHorizontal="5dp"
                 android:fontFamily="@font/monserrat_medium"
-                android:text="10min"
+                android:text=""
                 android:textColor="@color/gray"
                 android:textSize="12sp" />
         </LinearLayout>
